--- a/indox.html
+++ b/indox.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+   
 </head>
 <body>
     <h1>look mama i am using mobile</h1>
-    ,<h1>no no no</h1>
+    <h1>no no no</h1>
+    <p>ok i get it</p>
 </body>
 </html>
