--- a/indox.html
+++ b/indox.html
@@ -6,9 +6,9 @@
 <body>
     <h1>look mama i am using mobile</h1>
     <h1>no no no</h1>
-
+    
     <p>ok i get it</p>
-    <p>i am from second branch</p>
+    <p>i am from update second branch</p>
     <img src="bd..png" alt="">
 </body>
 </html>
